# octool

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  octool
.cargo/: config.toml
.circleci/: config.yaml  config.yml
.github/workflows/: ci.yml
INPUT/: README.md  Sample.plist  config.plist
docs/: index.md  simple_picture_guide.md
octool_config_files/: acidanthera_config.json  octool_config.json  parents.json
octool_files/: git_repo.json  octool_config.json
src/: build.rs  draw.rs  edit.rs  get_res.rs  init.rs  main.rs  main.rs.bak  parse_tex.rs  res.rs  snake.rs
tool_config_files/: acidanthera_config.json  config_differences.json  octool_config.json  other.json  parents.json  resource_list.json
