[package]
name = "octool"
version = "0.3.9"
authors = ["rusty-bits <rusty_bits@aol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "^1"
hex = "^0"
serde_json = "^1"
sha2 = "^0"
fs_extra = "^1"
crossterm = "*"
rand = "*"
zip = "*"
curl = "*"
walkdir = "*"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
